--- a/website/style.css
+++ b/website/style.css
@@ -120,6 +120,10 @@ ul {
         text-align: center;
     }
 
+    .header {
+        margin-top: 180px;
+    }
+
     .header img {
         max-width: 200px;
     }
@@ -128,4 +132,19 @@ ul {
         display: block;
         text-align: center;
     }
+
+    .navbar .container{
+        height: 200px;
+        flex-direction: column;
+    }
+
+    .nav {
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        margin-top: 50px;
+    }
+
 }
